force-app/main/default/objects/AA_Employee_Service__c/AA_Employee_Service__c.object-meta.xml
<CustomObject>
    <label>AA Employee Service</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>AA Employee Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AA Employee Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>