force-app/main/default/objects/AA_Employee_Service__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>AA_Employee__c</referenceTo>
    <relationshipLabel>AA Employee Services</relationshipLabel>
    <relationshipName>Employee_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>