force-app/main/default/objects/AA_Employee_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>AA_Service__c</referenceTo>
    <relationshipLabel>Employee Services</relationshipLabel>
    <relationshipName>Employee_Services</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>