force-app/main/default/objects/AA_Employee_Service__c/listViews/Silvina_Unas.listView-meta.xml
<ListView>
    <fullName>Silvina_Unas</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>Service__c</columns>
    <columns>Employee__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Name__c</field>
        <operation>contains</operation>
        <value>Silvina</value>
    </filters>
    <label>Silvina Uñas</label>
</ListView>